fix: fix minor typos